# pushdown

./: .dockerignore  .gitignore  Dockerfile  README.md  experiments.py
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/dsl/: 20Nov_1.py  20Nov_2.py  20Nov_3.py  20Nov_4.py  Ada1_1.py  Ada1_2.py  Ada1_3.py  Ada1_4.py  Ada3_1.py  Ada3_3.py  Ada3_4.py  Ada3_5.py  AggregationQuerySuite_3.py  AggregationQuerySuite_6.py  AggregationQuerySuite_8.py  AggregationQuerySuite_9.py  Basket_1.py  Basket_2.py  Basket_3.py  Basket_4.py  Chicago_1.py  Chicago_2.py  Chicago_3.py  DurationMin_2.py  DurationMin_3.py  DurationMin_5.py  DurationMin_6.py  DurationMin_7.py  (+81 more)
benchmarks/dsl-bench/: 20Nov_1.py  20Nov_2.py  20Nov_3.py  20Nov_4.py  Ada1_1.py  Ada1_2.py  Ada1_3.py  Ada1_4.py  Ada3_2.py  AggregationQuerySuite_1.py  AggregationQuerySuite_2.py  AggregationQuerySuite_4.py  AggregationQuerySuite_5.py  AggregationQuerySuite_7.py  Basket_1.py  Basket_2.py  Basket_3.py  Basket_4.py  Chicago_1.py  Chicago_2.py  Chicago_3.py  DurationMin_1.py  DurationMin_4.py  EventAggregationUdf_1.py  EventAggregationUdf_2.py  EventAggregationUdf_3.py  EventAggregationUdf_4.py  EventAggregationUdf_5.py  EventAggregationUdf_6.py  EventAggregationUdf_7.py  EventAggregationUdf_8.py  EventAggregationUdf_9.py  Flaredown1_3.py  HighLowAggregator_1.py  HighLowAggregator_2.py  HighLowAggregator_3.py  HighLowAggregator_4.py  HighLowAggregator_5.py  HighLowAggregator_6.py  HighLowAggregator_7.py  (+67 more)
results/: ast_sizes.csv  results.csv  results_eld.csv  results_noanalysis.csv  results_nobounds.csv  results_spacer.csv  results_speedups.csv  results_twophase.csv  udf_props.csv
synthesizer/: .ocamlformat  dune-project  pusharoot.opam
synthesizer/src/: ablcomp.ml  ast.ml  dune  exns.ml  extract.ml  lexer.mll  parser.mly  pass_cfa.ml  pass_encode.ml  pass_gc.ml  pass_monos.ml  pass_reduce.ml  pusharoo.ml  smtlib_utils.ml  solver.ml  synth.ml  utils.ml
(+154 files in other folders)
